--- a/Atividade-1/index.html
+++ b/Atividade-1/index.html
@@ -118,13 +118,9 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Abrace a Causa. Todos os direitos reservados. | <a href="#transparencia">Relatórios de Transparência</a></p>
-            <div class="social-links">
-                <a href="#" aria-label="Facebook da ONG"><span aria-hidden="true">📘</span></a>
-                <a href="#" aria-label="Instagram da ONG"><span aria-hidden="true">📸</span></a>
-            </div>
         </div>
     </footer>
 
-    <script src="js/script.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
