style: adicionando estilo e imagens ao projeto

--- a/Atividade-1/projetos.html
+++ b/Atividade-1/projetos.html
@@ -40,7 +40,7 @@
                 </p>
             </div>
             <figure class="hero-image">
-                <img src="assets/images/hero-projetos.jpg" alt="Foto de uma criança plantando uma árvore com a ajuda de um voluntário, simbolizando futuro e cuidado.">
+                <img src="assets/images/hero-projetos.webp" alt="Foto de uma criança plantando uma árvore com a ajuda de um voluntário, simbolizando futuro e cuidado.">
             </figure>
         </section>
 
@@ -50,7 +50,7 @@
 
                 <article class="projeto-card">
                     <figure>
-                        <img src="assets/images/projeto-educacao.jpg" alt="Voluntário ensinando crianças em uma sala de aula simples.">
+                        <img src="assets/images/projetos-educacao.jpg" alt="Voluntário ensinando crianças em uma sala de aula simples.">
                     </figure>
                     <div class="content">
                         <h3>Projeto Sementes do Saber</h3>
@@ -66,7 +66,7 @@
 
                 <article class="projeto-card reverse-layout">
                     <figure>
-                        <img src="assets/images/projeto-saude.jpg" alt="Profissional de saúde voluntário examinando um idoso.">
+                        <img src="assets/images/projetos-saude.jpg" alt="Profissional de saúde voluntário examinando um idoso.">
                     </figure>
                     <div class="content">
                         <h3>Missão Sorriso Amigo</h3>
@@ -127,7 +127,7 @@
                         <figcaption>Veja o nosso mais recente vídeo de prestação de contas (3:45).</figcaption>
                     </figure>
                     <figure class="gallery-item">
-                        <img src="assets/images/galeria-2.jpg" alt="Voluntários pintando um muro de escola com cores vibrantes.">
+                        <img src="assets/images/galeria-2.png" alt="Voluntários pintando um muro de escola com cores vibrantes.">
                         <figcaption>Reforma e Arte na Escola Comunitária.</figcaption>
                     </figure>
                 </div>
